--- a/namasdev.Data.Entity/packages.config
+++ b/namasdev.Data.Entity/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="EntityFramework" version="6.5.1" targetFramework="net462" />
   <package id="namasdev.Core" version="1.0.1" targetFramework="net462" />
+  <package id="namasdev.Data" version="1.0.0" targetFramework="net462" />
   <package id="System.Linq.Dynamic" version="1.0.8" targetFramework="net462" />
 </packages>
