--- a/namasdev.Data.Entity/namasdev.Data.Entity.csproj
+++ b/namasdev.Data.Entity/namasdev.Data.Entity.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Config\EntidadBorradoConfigBase.cs" />
     <Compile Include="DbContextBase.cs" />
+    <Compile Include="ICargaDatos.cs" />
     <Compile Include="IQueryableExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DbContextHelper.cs" />
